# poly-file-manager

./: .gitignore  CMakeLists.txt  README.md
include/: common_types.h  data_manager.hpp  file_manager.h  file_manager.hpp  file_meta.h  file_system_organizer.h  poly_file_manager.h  poly_file_manager_error.h  print.hpp  serializer.h  serializer.hpp  tag_manager.h  windows_shortcut_creator.h
include/cli/: cli_paraser.hpp  cli_parser.hpp  cmd.hpp  manager_cmd.hpp  path_cmd.hpp  tag_cmd.hpp
include/core/: bidirectional_map.hpp  data_manager.hpp  data_manager_new.hpp  file_manager.hpp  poly_file_manager.hpp  serializer.hpp  windows_shortcut_creator.hpp
include/utils/: tool.hpp
src/: data_manager.cpp  file_manager.cpp  file_meta.cpp  file_system_organizer.cpp  main.cpp  poly_file_manager.cpp  poly_file_manager_cli.cpp  poly_file_manager_error.cpp  print.cpp  serializer.cpp  tag_manager.cpp  windows_shortcut_creator.cpp
src/cli/: cli_paraser.cpp  cli_parser.cpp  main.cpp  manager_cmd.cpp  path_cmd.cpp  tag_cmd.cpp
src/core/: bidirectional_map.cpp  data_manager.cpp  data_manager_new.cpp  file_manager.cpp  poly_file_manager.cpp  serializer.cpp  windows_shortcut_creator.cpp
src/utils/: tool.cpp
test/: bidirectional_map_test.cpp  data_manager_new_test.cpp  data_manager_test1.cpp  data_manager_test2.cpp  file_manager_test.cpp  file_manager_test1.cpp  file_manager_test2.cpp  file_meta_test.cpp  main.cpp  organizer_test1.cpp  poly_file_manager_test1.cpp  serializer_test1.cpp  tag_manager_test.cpp  windows_shortcut_creator_test1.cpp
